--- a/list.html
+++ b/list.html
@@ -57,7 +57,7 @@
                             <div class="">
                                 <h3>Raddison Blue Dhaka Water Garden</h3>
                                 <p>Shegunbagicha, Dhaka | 3-4 minutes walk to Directorate of Food & Drugs Administration</p>
-                                <span>2 AC Room, AC Bathroom Parking <br>
+                                <span>1 AC Room - 1 Belcony - Parking <br>
                                     Free Airport Pickup - On Time</span>
                             </div>
 
@@ -100,7 +100,7 @@
                             <div>
                                 <h3>Asia Hotel & Resorts</h3>
                                 <p>Dhaka City Center | 3.6km from Dhaka Airport</p>
-                                <span>2 AC Room, AC Bathroom Parking <br>
+                                <span>1 AC Room - 1 Belcony - Parking <br>
                                  Airport Pickup</span>
                             </div>
 
@@ -145,7 +145,7 @@
                             <div>
                                 <h3>The Westin Dhaka</h3>
                                 <p>Gulshan 2, Dhaka | 6.2 km from Dhaka Airport (DAC-Shahjalal Intl.)</p>
-                                <span>2 AC Room, AC Bathroom Parking <br>
+                                <span>1 AC Room - 1 Belcony - Parking <br>
                                  Airport Pickup</span>
                             </div>
 
@@ -189,7 +189,7 @@
                             <div>
                                 <h3>Six Seasons Hotel</h3>
                                 <p>Gulshan 2, Dhaka | 6.2 km from Dhaka Airport (DAC-Shahjalal Intl.)</p>
-                                <span>2 AC Room, AC Bathroom Parking <br>
+                                <span>1 AC Room - 1 Belcony - Parking <br>
                                     Airport Pickup</span>
                             </div>
 
@@ -233,7 +233,7 @@
                             <div>
                                 <h3>Dhaka Regency Hotel & Resort</h3>
                                 <p>Dhaka City Center, Dhaka | 2.6 km from Dhaka Airport (DAC-Shahjalal Intl.)</p>
-                                <span>2 AC Room, AC Bathroom Parking <br>
+                                <span>1 AC Room - 1 Belcony - Parking <br>
                                     Airport Pickup</span>
                             </div>
 
